# nbadashboard

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  gitpodCommand.sh  gitpodInit.sh  gitpodSetup.sh  mvp.csv  plotlynba.py  pyproject.toml  requirements.txt
seasons/regularSeason/csv/: nba_1946-47.csv  nba_1947-48.csv  nba_1948-49.csv  nba_1949-50.csv  nba_1950-51.csv  nba_1951-52.csv  nba_1952-53.csv  nba_1953-54.csv  nba_1954-55.csv  nba_1955-56.csv  nba_1956-57.csv  nba_1957-58.csv  nba_1958-59.csv  nba_1959-60.csv  nba_1960-61.csv  nba_1961-62.csv  nba_1962-63.csv  nba_1963-64.csv  nba_1964-65.csv  nba_1965-66.csv  nba_1966-67.csv  nba_1967-68.csv  nba_1968-69.csv  nba_1969-70.csv  nba_1970-71.csv  nba_1971-72.csv  nba_1972-73.csv  nba_1973-74.csv  nba_1974-75.csv  nba_1975-76.csv  nba_1976-77.csv  nba_1977-78.csv  nba_1978-79.csv  nba_1979-80.csv  nba_1980-81.csv  nba_1981-82.csv  nba_1982-83.csv  nba_1983-84.csv  nba_1984-85.csv  nba_1985-86.csv  (+32 more)
seasons/team_regularSeason/csv/: nba_1996-97.csv  nba_1997-98.csv  nba_1998-99.csv  nba_1999-00.csv  nba_2000-01.csv  nba_2001-02.csv  nba_2002-03.csv  nba_2003-04.csv  nba_2004-05.csv  nba_2005-06.csv  nba_2006-07.csv  nba_2007-08.csv  nba_2008-09.csv  nba_2009-10.csv  nba_2010-11.csv  nba_2011-12.csv  nba_2012-13.csv  nba_2013-14.csv  nba_2014-15.csv  nba_2015-16.csv  nba_2016-17.csv  nba_2017-18.csv
