[tool.poetry]
name = "nbadashboard"
version = "0.1.0"
description = ""
authors = ["aaronS7 <ajscirocco7+dash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
